--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
-.env.local
 
 # testing
 /coverage
@@ -27,7 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-
+.env*.local
 
 # vercel
 .vercel
@@ -35,5 +34,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-.vercel
